@@ -12,7 +12,8 @@
 #include <rudiments/environment.h>
 #include <rudiments/stdio.h>
 
-//#define DEBUG_MESSAGES 1
+#define DEBUG_MESSAGES 1
+//#define DEBUG_TO_FILE 1
 #include <debugprint.h>
 
 // windows needs this
@@ -123,6 +124,10 @@ struct STMT {
 	dictionary<int32_t,outputbind *>	outputbinds;
 	SQLROWSETSIZE				*rowsfetchedptr;
 	SQLUSMALLINT				*rowstatusptr;
+	bool					executed;
+	bool					executedbynumresultcols;
+	SQLRETURN				executedbynumresultcolsresult;
+	SQLULEN					rowbindtype;
 };
 
 static SQLRETURN SQLR_SQLAllocHandle(SQLSMALLINT handletype,
@@ -266,6 +271,10 @@ static SQLRETURN SQLR_SQLAllocHandle(SQLSMALLINT handletype,
 			stmt->appparamdesc=stmt->impparamdesc;
 			stmt->rowsfetchedptr=NULL;
 			stmt->rowstatusptr=NULL;
+			stmt->executed=false;
+			stmt->executedbynumresultcols=false;
+			stmt->executedbynumresultcolsresult=SQL_SUCCESS;
+			stmt->rowbindtype=SQL_BIND_BY_COLUMN;
 			return SQL_SUCCESS;
 			}
 		case SQL_HANDLE_DESC:
@@ -294,6 +303,62 @@ SQLRETURN SQL_API SQLAllocStmt(SQLHDBC connectionhandle,
 				(SQLHANDLE *)statementhandle);
 }
 
+static SQLLEN SQLR_GetCColumnTypeSize(SQLSMALLINT targettype) {
+	switch (targettype) {
+		case SQL_C_CHAR:
+		case SQL_C_BIT:
+			return sizeof(SQLCHAR);
+		case SQL_C_SHORT:
+		case SQL_C_USHORT:
+		case SQL_C_SSHORT:
+			return sizeof(SQLSMALLINT);
+		case SQL_C_TINYINT:
+		case SQL_C_UTINYINT:
+		case SQL_C_STINYINT:
+			return sizeof(SQLCHAR);
+		case SQL_C_LONG:
+		case SQL_C_ULONG:
+		case SQL_C_SLONG:
+			return sizeof(SQLINTEGER);
+		case SQL_C_SBIGINT:
+		case SQL_C_UBIGINT:
+			return sizeof(SQLBIGINT);
+		case SQL_C_FLOAT:
+			return sizeof(SQLREAL);
+		case SQL_C_DOUBLE:
+			return sizeof(SQLDOUBLE);
+		case SQL_C_NUMERIC:
+			return sizeof(SQL_NUMERIC_STRUCT);
+		case SQL_C_DATE:
+		case SQL_C_TYPE_DATE:
+			return sizeof(DATE_STRUCT);
+		case SQL_C_TIME:
+		case SQL_C_TYPE_TIME:
+			return sizeof(TIME_STRUCT);
+		case SQL_C_TIMESTAMP:
+		case SQL_C_TYPE_TIMESTAMP:
+			return sizeof(TIMESTAMP_STRUCT);
+		case SQL_C_INTERVAL_YEAR:
+		case SQL_C_INTERVAL_MONTH:
+		case SQL_C_INTERVAL_DAY:
+		case SQL_C_INTERVAL_HOUR:
+		case SQL_C_INTERVAL_MINUTE:
+		case SQL_C_INTERVAL_SECOND:
+		case SQL_C_INTERVAL_YEAR_TO_MONTH:
+		case SQL_C_INTERVAL_DAY_TO_HOUR:
+		case SQL_C_INTERVAL_DAY_TO_MINUTE:
+		case SQL_C_INTERVAL_DAY_TO_SECOND:
+		case SQL_C_INTERVAL_HOUR_TO_MINUTE:
+		case SQL_C_INTERVAL_HOUR_TO_SECOND:
+		case SQL_C_INTERVAL_MINUTE_TO_SECOND:
+			return sizeof(SQL_INTERVAL_STRUCT);
+		case SQL_C_GUID:
+			return 36;
+		default:
+			return 0;
+	}
+}
+
 SQLRETURN SQL_API SQLBindCol(SQLHSTMT statementhandle,
 					SQLUSMALLINT columnnumber,
 					SQLSMALLINT targettype,
@@ -317,7 +382,11 @@ SQLRETURN SQL_API SQLBindCol(SQLHSTMT statementhandle,
 	FIELD	*field=new FIELD;
 	field->targettype=targettype;
 	field->targetvalue=targetvalue;
-	field->bufferlength=bufferlength;
+	if (bufferlength) {
+		field->bufferlength=bufferlength;
+	} else {
+		field->bufferlength=SQLR_GetCColumnTypeSize(targettype);
+	}
 	field->strlen_or_ind=strlen_or_ind;
 
 	stmt->fieldlist.setValue(columnnumber-1,field);
@@ -2294,6 +2363,51 @@ SQLRETURN SQL_API SQLExecDirect(SQLHSTMT statementhandle,
 	bool	result=stmt->cur->sendQuery((const char *)statementtext,
 							statementtextlength);
 
+	// the statement has been executed
+	stmt->executed=true;
+
+	// handle success
+	if (result) {
+		SQLR_FetchOutputBinds(stmt);
+		return SQL_SUCCESS;
+	}
+
+	// handle error
+	SQLR_STMTSetError(stmt,stmt->cur->errorMessage(),
+				stmt->cur->errorNumber(),NULL);
+	return SQL_ERROR;
+}
+
+SQLRETURN SQL_API SQLR_SQLExecute(SQLHSTMT statementhandle) {
+	debugFunction();
+
+	STMT	*stmt=(STMT *)statementhandle;
+	if (statementhandle==SQL_NULL_HSTMT || !stmt || !stmt->cur) {
+		debugPrintf("NULL stmt handle\n");
+		return SQL_INVALID_HANDLE;
+	}
+
+	// don't actually do anything if the statement
+	// was already executed by SQLNumResultCols
+	if (stmt->executedbynumresultcols) {
+		debugPrintf("already executed by SQLNumResultCols...\n");
+		stmt->executedbynumresultcols=false;
+		return stmt->executedbynumresultcolsresult;
+	}
+
+	// reinit row indices
+	stmt->currentfetchrow=0;
+	stmt->currentgetdatarow=0;
+
+	// clear the error
+	SQLR_STMTClearError(stmt);
+
+	// run the query
+	bool	result=stmt->cur->executeQuery();
+
+	// the statement has been executed
+	stmt->executed=true;
+
 	// handle success
 	if (result) {
 		SQLR_FetchOutputBinds(stmt);
@@ -2308,33 +2422,7 @@ SQLRETURN SQL_API SQLExecDirect(SQLHSTMT statementhandle,
 
 SQLRETURN SQL_API SQLExecute(SQLHSTMT statementhandle) {
 	debugFunction();
-
-	STMT	*stmt=(STMT *)statementhandle;
-	if (statementhandle==SQL_NULL_HSTMT || !stmt || !stmt->cur) {
-		debugPrintf("NULL stmt handle\n");
-		return SQL_INVALID_HANDLE;
-	}
-
-	// reinit row indices
-	stmt->currentfetchrow=0;
-	stmt->currentgetdatarow=0;
-
-	// clear the error
-	SQLR_STMTClearError(stmt);
-
-	// run the query
-	bool	result=stmt->cur->executeQuery();
-
-	// handle success
-	if (result) {
-		SQLR_FetchOutputBinds(stmt);
-		return SQL_SUCCESS;
-	}
-
-	// handle error
-	SQLR_STMTSetError(stmt,stmt->cur->errorMessage(),
-				stmt->cur->errorNumber(),NULL);
-	return SQL_ERROR;
+	return SQLR_SQLExecute(statementhandle);
 }
 
 static SQLRETURN SQLR_SQLGetData(SQLHSTMT statementhandle,
@@ -2358,26 +2446,31 @@ static SQLRETURN SQLR_Fetch(SQLHSTMT statementhandle, SQLULEN *pcrow,
 	if (!stmt->cur->getRow(stmt->currentfetchrow)) {
 		return SQL_NO_DATA_FOUND;
 	}
-	stmt->currentgetdatarow=stmt->currentfetchrow;
 
 	// Update the number of rows that were fetched in this operation.
 	uint64_t	firstrowindex=stmt->cur->firstRowIndex();
 	uint64_t	rowcount=stmt->cur->rowCount();
 	uint64_t	lastrowindex=(rowcount)?rowcount-1:0;
 	uint64_t	bufferedrowcount=lastrowindex-firstrowindex;
-	uint64_t	rowsfetched=(firstrowindex==stmt->currentgetdatarow)?
+	uint64_t	rowsfetched=(firstrowindex==stmt->currentfetchrow)?
 							bufferedrowcount:0;
-	if (stmt->rowsfetchedptr) {
-		*stmt->rowsfetchedptr=rowsfetched;
-	}
+
+	// FIXME: set pcrow if SQLExtendedFetch is called,
+	// and don't set rowsfetchedptr
 	if (pcrow) {
 		*pcrow=rowsfetched;
+	}
+	if (stmt->rowsfetchedptr) {
+		*(stmt->rowsfetchedptr)=rowsfetched;
 	}
 
 	// update row statuses
 	for (SQLULEN i=0; i<stmt->cur->getResultSetBufferSize(); i++) {
 		SQLUSMALLINT	status=(i<rowsfetched)?
 					SQL_ROW_SUCCESS:SQL_ROW_NOROW;
+
+		// FIXME: set rgfrowstatus if SQLExtendedFetch
+		// is called, and don't set rowstatusptr
 		if (rgfrowstatus) {
 			rgfrowstatus[i]=status;
 		}
@@ -2386,30 +2479,44 @@ static SQLRETURN SQLR_Fetch(SQLHSTMT statementhandle, SQLULEN *pcrow,
 		}
 	}
 
-	// move on to the next row
-	stmt->currentfetchrow++;
-
 	// update column binds
 	uint32_t	colcount=stmt->cur->colCount();
-	for (uint32_t index=0; index<colcount; index++) {
+	for (uint64_t row=0; row<rowsfetched; row++) {
 
-		// get the bound field, if this field isn't bound, move on
-		FIELD	*field=NULL;
-		if (!stmt->fieldlist.getValue(index,&field)) {
-			continue;
+stdoutput.printf("currentgetdatarow=%lld\n",stmt->currentgetdatarow);
+		for (uint32_t index=0; index<colcount; index++) {
+
+			// get the bound field, if this field isn't bound,
+			// move on
+			FIELD	*field=NULL;
+			if (!stmt->fieldlist.getValue(index,&field)) {
+				continue;
+			}
+
+			// get the data into the bound column
+			SQLRETURN	result=
+					SQLR_SQLGetData(
+						statementhandle,
+						index+1,
+						field->targettype,
+						((unsigned char *)
+							field->targetvalue)+
+							(field->bufferlength*
+							row),
+						field->bufferlength,
+						field->strlen_or_ind);
+			if (result!=SQL_SUCCESS) {
+				return result;
+			}
 		}
 
-		// get the data into the bound column
-		SQLRETURN	result=SQLR_SQLGetData(statementhandle,
-							index+1,
-							field->targettype,
-							field->targetvalue,
-							field->bufferlength,
-							field->strlen_or_ind);
-		if (result!=SQL_SUCCESS) {
-			return result;
-		}
+		// move on to the next row
+		stmt->currentgetdatarow++;
 	}
+
+	// move on to the next rowset
+	stmt->currentfetchrow=stmt->currentfetchrow+rowsfetched;
+
 	return SQL_SUCCESS;
 }
 
@@ -3102,15 +3209,20 @@ static SQLRETURN SQLR_SQLGetDiagRec(SQLSMALLINT handletype,
 	}
 
 	debugPrintf("messagetext: %s\n",(error)?error:"");
+	debugPrintf("bufferlength: %d\n",bufferlength);
 	debugPrintf("nativeerror: %lld\n",(int64_t)errn);
 	debugPrintf("sqlstate: %s\n",(sqlst)?sqlst:"");
 
 	// copy out the error and sqlstate
 	charstring::safeCopy((char *)messagetext,(size_t)bufferlength,error);
+	*textlength=charstring::length(error);
+	if (*textlength>bufferlength) {
+		*textlength=bufferlength;
+	}
 	if (nativeerror) {
 		*nativeerror=errn;
 	}
-	charstring::copy((char *)sqlstate,(sqlst)?sqlst:"HYOOO");
+	charstring::copy((char *)sqlstate,(sqlst && sqlst[0])?sqlst:"HYOOO");
 
 	return SQL_SUCCESS;
 }
@@ -3724,6 +3836,16 @@ SQLRETURN SQL_API SQLGetInfo(SQLHDBC connectionhandle,
 			debugPrintf("infotype: SQL_DBMS_VER\n");
 			strval=conn->con->dbVersion();
 			break;
+		case SQL_CURSOR_COMMIT_BEHAVIOR:
+			debugPrintf("infotype: SQL_CURSOR_COMMIT_BEHAVIOR\n");
+			// FIXME: is this true for all db's?
+			*(SQLUINTEGER *)infovalue=SQL_CB_CLOSE;
+			break;
+		case SQL_CURSOR_ROLLBACK_BEHAVIOR:
+			debugPrintf("infotype: SQL_CURSOR_ROLLBACK_BEHAVIOR\n");
+			// FIXME: is this true for all db's?
+			*(SQLUINTEGER *)infovalue=SQL_CB_CLOSE;
+			break;
 		case SQL_DATABASE_NAME:
 			debugPrintf("infotype: SQL_DATABASE_NAME\n");
 			strval=conn->con->getCurrentDatabase();
@@ -3752,6 +3874,59 @@ SQLRETURN SQL_API SQLGetInfo(SQLHDBC connectionhandle,
 			// batch sql is not supported
 			*(SQLUINTEGER *)infovalue=0;
 			break;
+		case SQL_CATALOG_NAME:
+			debugPrintf("infotype: SQL_CATALOG_NAME\n");
+			// FIXME: this isn't true for all db's
+			strval="Y";
+			break;
+		case SQL_MAX_CATALOG_NAME_LEN:
+			debugPrintf("infotype: SQL_MAX_CATALOG_NAME_LEN\n");
+			// 0 means no max length or unknown
+			*(SQLUINTEGER *)infovalue=0;
+			break;
+		case SQL_SCHEMA_USAGE:
+			debugPrintf("infotype: SQL_SCHEMA_USAGE\n");
+			// FIXME: this isn't true for all db's
+			*(SQLUINTEGER *)infovalue=
+					SQL_SU_DML_STATEMENTS|
+					SQL_SU_PROCEDURE_INVOCATION|
+					SQL_SU_TABLE_DEFINITION|
+					SQL_SU_INDEX_DEFINITION|
+					SQL_SU_PRIVILEGE_DEFINITION;
+			break;
+		case SQL_TXN_ISOLATION_OPTION:
+			debugPrintf("infotype: SQL_TXN_ISOLATION_OPTION\n");
+			// FIXME: this isn't true for all db's
+			*(SQLUINTEGER *)infovalue=
+					SQL_TXN_READ_UNCOMMITTED|
+					SQL_TXN_READ_COMMITTED|
+					SQL_TXN_REPEATABLE_READ|
+					SQL_TXN_SERIALIZABLE;
+			break;
+		case SQL_MAX_SCHEMA_NAME_LEN:
+			debugPrintf("infotype: SQL_MAX_SCHEMA_NAME_LEN\n");
+			// 0 means no max length or unknown
+			*(SQLUINTEGER *)infovalue=0;
+			break;
+		case SQL_MAX_TABLE_NAME_LEN:
+			debugPrintf("infotype: SQL_MAX_TABLE_NAME_LEN\n");
+			// 0 means no max length or unknown
+			*(SQLUINTEGER *)infovalue=0;
+			break;
+		case SQL_MAX_PROCEDURE_NAME_LEN:
+			debugPrintf("infotype: SQL_MAX_PROCEDURE_NAME_LEN\n");
+			// 0 means no max length or unknown
+			*(SQLUINTEGER *)infovalue=0;
+			break;
+		case SQL_IDENTIFIER_QUOTE_CHAR:
+			debugPrintf("infotype: SQL_IDENTIFIER_QUOTE_CHAR\n");
+			// FIXME: is this true for all db's?
+			strval="\"";
+			break;
+		/*case SQL_GETDATA_EXTENSIONS:
+			debugPrintf("infotype: SQL_GETDATA_EXTENSIONS\n");
+			*(SQLUINTEGER *)infovalue=SQL_GD_BLOCK;
+			break;*/
 		default:
 			debugPrintf("unsupported infotype: %d\n",infotype);
 			break;
@@ -3803,11 +3978,11 @@ static SQLRETURN SQLR_SQLGetStmtAttr(SQLHSTMT statementhandle,
 			break;
 		case SQL_ATTR_CURSOR_SCROLLABLE:
 			debugPrintf("attribute: SQL_ATTR_CURSOR_SCROLLABLE\n");
-			// FIXME: implement
+			*(SQLULEN *)value=SQL_NONSCROLLABLE;
 			break;
 		case SQL_ATTR_CURSOR_SENSITIVITY:
 			debugPrintf("attribute: SQL_ATTR_CURSOR_SENSITIVITY\n");
-			// FIXME: implement
+			*(SQLULEN *)value=SQL_UNSPECIFIED;
 			break;
 		#endif
 		//case SQL_ATTR_QUERY_TIMEOUT:
@@ -3815,42 +3990,43 @@ static SQLRETURN SQLR_SQLGetStmtAttr(SQLHSTMT statementhandle,
 			debugPrintf("attribute: "
 					"SQL_ATTR_QUERY_TIMEOUT/"
 					"SQL_QUERY_TIMEOUT\n");
-			// FIXME: implement
+			*(SQLULEN *)value=0;
 			break;
 		//case SQL_ATTR_MAX_ROWS:
 		case SQL_MAX_ROWS:
 			debugPrintf("attribute: "
 					"SQL_ATTR_MAX_ROWS/"
 					"SQL_MAX_ROWS:\n");
-			// FIXME: implement
+			*(SQLULEN *)value=0;
 			break;
 		//case SQL_ATTR_NOSCAN:
 		case SQL_NOSCAN:
 			debugPrintf("attribute: "
 					"SQL_ATTR_NOSCAN/"
 					"SQL_NOSCAN\n");
-			// FIXME: implement
+			// FIXME: is this true for all db's?
+			*(SQLULEN *)value=SQL_NOSCAN_OFF;
 			break;
 		//case SQL_ATTR_MAX_LENGTH:
 		case SQL_MAX_LENGTH:
 			debugPrintf("attribute: "
 					"SQL_ATTR_MAX_LENGTH/"
 					"SQL_MAX_LENGTH\n");
-			// FIXME: implement
+			*(SQLULEN *)value=0;
 			break;
 		//case SQL_ATTR_ASYNC_ENABLE:
 		case SQL_ASYNC_ENABLE:
 			debugPrintf("attribute: "
 					"SQL_ATTR_ASYNC_ENABLE/"
 					"SQL_ASYNC_ENABLE\n");
-			// FIXME: implement
+			*(SQLULEN *)value=SQL_ASYNC_ENABLE_OFF;
 			break;
 		//case SQL_ATTR_ROW_BIND_TYPE:
 		case SQL_BIND_TYPE:
 			debugPrintf("attribute: "
 					"SQL_ATTR_BIND_TYPE/"
 					"SQL_BIND_TYPE\n");
-			// FIXME: implement
+			*(SQLULEN *)value=stmt->rowbindtype;
 			break;
 		//case SQL_ATTR_CONCURRENCY:
 		//case SQL_ATTR_CURSOR_TYPE:
@@ -3859,43 +4035,44 @@ static SQLRETURN SQLR_SQLGetStmtAttr(SQLHSTMT statementhandle,
 					"SQL_ATTR_CONCURRENCY/"
 					"SQL_ATTR_CURSOR_TYPE/"
 					"SQL_CURSOR_TYPE\n");
-			// FIXME: implement
+			*(SQLULEN *)value=SQL_CURSOR_FORWARD_ONLY;
 			break;
 		case SQL_CONCURRENCY:
 			debugPrintf("attribute: SQL_CONCURRENCY\n");
-			// FIXME: implement
+			*(SQLULEN *)value=SQL_CONCUR_READ_ONLY;
 			break;
 		//case SQL_ATTR_KEYSET_SIZE:
 		case SQL_KEYSET_SIZE:
 			debugPrintf("attribute: "
 					"SQL_ATTR_KEYSET_SIZE/"
 					"SQL_KEYSET_SIZE\n");
-			// FIXME: implement
+			*(SQLULEN *)value=0;
 			break;
 		case SQL_ROWSET_SIZE:
 			debugPrintf("attribute: SQL_ROWSET_SIZE\n");
-			// FIXME: implement
+			*(SQLULEN *)value=stmt->cur->getResultSetBufferSize();
 			break;
 		//case SQL_ATTR_SIMULATE_CURSOR:
 		case SQL_SIMULATE_CURSOR:
 			debugPrintf("attribute: "
 					"SQL_ATTR_SIMULATE_CURSOR/"
 					"SQL_SIMULATE_CURSOR\n");
-			// FIXME: implement
+			// FIXME: I'm not sure this is true...
+			*(SQLULEN *)value=SQL_SC_UNIQUE;
 			break;
 		//case SQL_ATTR_RETRIEVE_DATA:
 		case SQL_RETRIEVE_DATA:
 			debugPrintf("attribute: "
 					"SQL_ATTR_RETRIEVE_DATA/"
 					"SQL_RETRIEVE_DATA\n");
-			// FIXME: implement
+			*(SQLULEN *)value=SQL_RD_ON;
 			break;
 		//case SQL_ATTR_USE_BOOKMARKS:
 		case SQL_USE_BOOKMARKS:
 			debugPrintf("attribute: "
 					"SQL_ATTR_USE_BOOKMARKS/"
 					"SQL_USE_BOOKMARKS\n");
-			// FIXME: implement
+			*(SQLULEN *)value=SQL_UB_OFF;
 			break;
 		case SQL_GET_BOOKMARK:
 			debugPrintf("attribute: SQL_GET_BOOKMARK\n");
@@ -3911,7 +4088,7 @@ static SQLRETURN SQLR_SQLGetStmtAttr(SQLHSTMT statementhandle,
 		#if (ODBCVER >= 0x0300)
 		case SQL_ATTR_ENABLE_AUTO_IPD:
 			debugPrintf("attribute: SQL_ATTR_ENABLE_AUTO_IPD\n");
-			// FIXME: implement
+			*(SQLULEN *)value=SQL_TRUE;
 			break;
 		case SQL_ATTR_FETCH_BOOKMARK_PTR:
 			debugPrintf("attribute: SQL_ATTR_FETCH_BOOKMARK_PTR\n");
@@ -3955,11 +4132,11 @@ static SQLRETURN SQLR_SQLGetStmtAttr(SQLHSTMT statementhandle,
 			break;
 		case SQL_ATTR_ROW_STATUS_PTR:
 			debugPrintf("attribute: SQL_ATTR_ROW_STATUS_PTR\n");
-			// I think this is supposed to be write-only
+			*(SQLUSMALLINT **)value=stmt->rowstatusptr;
 			break;
 		case SQL_ATTR_ROWS_FETCHED_PTR:
 			debugPrintf("attribute: SQL_ATTR_ROWS_FETCHED_PTR\n");
-			// I think this is supposed to be write-only
+			*(SQLROWSETSIZE **)value=stmt->rowsfetchedptr;
 			break;
 		case SQL_ATTR_ROW_ARRAY_SIZE:
 			debugPrintf("attribute: SQL_ATTR_ROW_ARRAY_SIZE\n");
@@ -4019,10 +4196,22 @@ SQLRETURN SQL_API SQLNumResultCols(SQLHSTMT statementhandle,
 		return SQL_INVALID_HANDLE;
 	}
 
+	SQLRETURN	result=SQL_SUCCESS;
+
+	// Some db's apparently support this after the prepare phase, prior
+	// to execution.  SQL Relay doesn't but we can fake that by executing
+	// here and bypassing the next attempt to execute.
+	if (!stmt->executed) {
+		debugPrintf("not executed yet...\n");
+		stmt->executedbynumresultcolsresult=SQLR_SQLExecute(stmt);
+		stmt->executedbynumresultcols=true;
+		result=stmt->executedbynumresultcolsresult;
+	}
+
 	*columncount=(SQLSMALLINT)stmt->cur->colCount();
 	debugPrintf("columncount: %d\n",(int)*columncount);
 
-	return SQL_SUCCESS;
+	return result;
 }
 
 SQLRETURN SQL_API SQLParamData(SQLHSTMT statementhandle,
@@ -4065,6 +4254,10 @@ SQLRETURN SQL_API SQLPrepare(SQLHSTMT statementhandle,
 	#endif
 	stmt->cur->prepareQuery((const char *)statementtext,
 						statementtextlength);
+
+	// the statement has not been executed yet
+	stmt->executed=false;
+	stmt->executedbynumresultcols=false;
 
 	return SQL_SUCCESS;
 }
@@ -4114,6 +4307,7 @@ static SQLRETURN SQLR_SQLSetConnectAttr(SQLHDBC connectionhandle,
 	}
 
 	switch (attribute) {
+		#ifdef SQL_AUTOCOMMIT
 		case SQL_AUTOCOMMIT:
 		{
 			debugPrintf("attribute: SQL_AUTOCOMMIT\n");
@@ -4129,6 +4323,7 @@ static SQLRETURN SQLR_SQLSetConnectAttr(SQLHDBC connectionhandle,
 				}
 			}
 		}
+		#endif
 
 		// FIXME: implement
  		/*case SQL_ACCESS_MODE:
@@ -4137,8 +4332,6 @@ static SQLRETURN SQLR_SQLSetConnectAttr(SQLHDBC connectionhandle,
 		case SQL_OPT_TRACEFILE:
 		case SQL_TRANSLATE_DLL:
 		case SQL_TRANSLATE_OPTION:
-		case SQL_TXN_ISOLATION:
-		case SQL_CURRENT_QUALIFIER:
 		case SQL_ODBC_CURSORS:
 		case SQL_QUIET_MODE:
 		case SQL_PACKET_SIZE:
@@ -4372,8 +4565,9 @@ static SQLRETURN SQLR_SQLSetStmtAttr(SQLHSTMT statementhandle,
 		case SQL_BIND_TYPE:
 			debugPrintf("attribute: "
 					"SQL_ATTR_ROW_BIND_TYPE/"
-					"SQL_BIND_TYPE\n");
-			// FIXME: implement
+					"SQL_BIND_TYPE: "
+					"%lld\n",(uint64_t)(value));
+			stmt->rowbindtype=(SQLULEN)value;
 			return SQL_SUCCESS;
 		//case SQL_ATTR_CONCURRENCY:
 		//case SQL_ATTR_CURSOR_TYPE:
@@ -4485,10 +4679,9 @@ static SQLRETURN SQLR_SQLSetStmtAttr(SQLHSTMT statementhandle,
 			stmt->rowsfetchedptr=(SQLROWSETSIZE *)value;
 			return SQL_SUCCESS;
 		case SQL_ATTR_ROW_ARRAY_SIZE:
-			debugPrintf("attribute: SQL_ATTR_ROW_ARRAY_SIZE\n");
-			// use reinterpret_cast to avoid compiler warnings
-			stmt->cur->setResultSetBufferSize(
-					reinterpret_cast<uint64_t>(value));
+			debugPrintf("attribute: SQL_ATTR_ROW_ARRAY_SIZE: "
+						"%lld\n",(uint64_t)(value));
+			stmt->cur->setResultSetBufferSize((uint64_t)value);
 			return SQL_SUCCESS;
 		#endif
 		#if (ODBCVER < 0x0300)
@@ -4802,16 +4995,19 @@ SQLRETURN SQL_API SQLExtendedFetch(SQLHSTMT statementhandle,
 					SQLLEN fetchoffset,
 					SQLULEN *pcrow,
 					SQLUSMALLINT *rgfrowstatus) {
+	debugFunction();
+	return SQLR_Fetch(statementhandle,pcrow,rgfrowstatus);
+}
 #else
 SQLRETURN SQL_API SQLExtendedFetch(SQLHSTMT statementhandle,
 					SQLUSMALLINT fetchorientation,
 					SQLROWOFFSET fetchoffset,
 					SQLROWSETSIZE *pcrow,
 					SQLUSMALLINT *rgfrowstatus) {
-#endif
 	debugFunction();
-	return SQLR_Fetch(statementhandle,NULL,NULL);
+	return SQLR_Fetch(statementhandle,(SQLULEN *)pcrow,rgfrowstatus);
 }
+#endif
 
 SQLRETURN SQL_API SQLForeignKeys(SQLHSTMT statementhandle,
 					SQLCHAR *szPkCatalogName,
@@ -4967,7 +5163,7 @@ SQLRETURN SQL_API SQLSetPos(SQLHSTMT statementhandle,
 		return SQL_INVALID_HANDLE;
 	}
 
-	// not supported
+	// FIXME: I think this could be supported
 	SQLR_STMTSetError(stmt,NULL,0,"IM001");
 
 	return SQL_ERROR;
